tests/ui/traits/const-traits/const_derives/derive-const-gate.stderr
error[E0658]: use of unstable library feature `derive_const`
  --> $DIR/derive-const-gate.rs:1:3
   |
LL | #[derive_const(Default)]
   |   ^^^^^^^^^^^^
   |
   = help: add `#![feature(derive_const)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-gate.rs:1:16
   |
LL | #[derive_const(Default)]
   |                ^^^^^^^ this trait is not `const`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
